bk_ida/gccida/g2/change_address
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/change_address/src/emit-rtl.c:2415:34: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  change_address( rtx memref, machine_mode mode, rtx addr) 
                                 ^
                                 enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/change_address/src/emit-rtl.c:2418:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/change_address/src/emit-rtl.c:2435:40: error: use of undeclared identifier 'machine_mode'
mode_alignment = get_mode_alignment( ( machine_mode)*( ( unsigned __int8 *)v3 + 2)); 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/change_address/src/emit-rtl.c:2436:29: error: use of undeclared identifier 'machine_mode'
v7 = gen_rtx_CONST_INT_0( ( machine_mode)mode_size[v4], *( __int64 *)&mode); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/change_address/src/emit-rtl.c:2438:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( __int64 *)memref[1]; 
                 ^~~~~~~~~
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/change_address/src/obj/emit-rtl.o] Error 1
